# webway_ivory

./: main.py  pyproject.toml
ivory/: __init__.py
ivory/constants/: config.py
ivory/models/github/: __init__.py  repository.py
ivory/modules/: __init__.py  github_module.py
ivory/services/: __init__.py  api_client.py
ivory/services/github/: __init__.py  github_service.py  github_service_handler.py
ivory/static/css/: github.css
ivory/templates/: base.html  index.html
ivory/templates/errors/: 404.html  500.html
ivory/templates/github/: repo_detail.html  repos.html
ivory/utils/: logging.py
ivory/views/: __init__.py
ivory/views/github/: __init__.py  routes.py
