[tool.poetry]
name = "webway-ivory"
version = "0.1.0"
description = ""
authors = ["pranjal-upadhyaya <rktpranjal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
flask = "^3.1.0"
pydantic = "^2.11.2"
dotenv = "^0.9.9"
pydantic-settings = "^2.8.1"
injector = "^0.22.0"
loguru = "^0.7.3"
requests = "^2.32.3"
ebony = { git = "https://github.com/pranjal-upadhyaya/webway.git", branch = "dev" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
